@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id("application")
+    id("org.openjfx.javafxplugin") version "0.0.13"
 }
 
 group = "org.example"
@@ -12,6 +14,18 @@ repositories {
 dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+javafx {
+    version = "17.0.8"
+    modules = listOf("javafx.controls", "javafx.fxml")
+}
+
+application {
+    mainClass.set("org.example.Main")
+    applicationDefaultJvmArgs = listOf(
+        "--add-modules=javafx.controls,javafx.fxml"
+    )
 }
 
 tasks.test {
